fix: don't overflow: hidden, it will hide menu button

--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,6 @@ header h1 {
   z-index: 1;
   display: grid;
   grid-template-rows: 80px 50px auto;
-  overflow: hidden;
 }
 
 #menu.open {
